# GazzettaBot

./: Cargo.toml  Dockerfile  docker-compose.yaml
gazzetta-common/: Cargo.toml
gazzetta-common/src/: cache.rs  lib.rs
gazzetta-common/src/cache/: redis.rs
gazzetta-injest/: Cargo.toml
gazzetta-injest/src/: main.rs
gazzetta-notify/: Cargo.toml
gazzetta-server/: Cargo.toml
gazzetta-server/src/: main.rs
gazzetta-telegram/: Cargo.toml
gazzetta-telegram/src/: main.rs
