[workspace]
resolver = "2"
members = [ "gazzetta-common",
    "gazzetta-injest",
    "gazzetta-telegram",
    "gazzetta-server"
]

[workspace.dependencies]
gazzetta-common = { path = "./gazzetta-common" }
tokio = { version = "1", features = ["full"] }
backoff = { version = "0.4.0", features = ["tokio"] }
redis = { version = "0.25.3", features = ["tokio-comp", "ahash", "connection-manager"] }
rsmq_async = "9.0.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
env_logger = "0.11.3"
log = "0.4.21"
envconfig = "0.10.0"
anyhow = "1.0.82"
