[package]
name = "gazzetta-injest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gazzetta-common.workspace = true
anyhow.workspace = true
env_logger.workspace = true
envconfig.workspace = true
log.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
rsmq_async.workspace = true
backoff.workspace = true
reqwest = "0.12.4"
rss = "2.0.7"
scraper = "0.19.0"
